--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
